# mm-predict

./: .gitignore  CLAUDE.md  README.md  docker-compose-coolify.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: Dockerfile  main.py  pyproject.toml
core/: artifacts.py
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AboutSection.tsx  ExternalLink.tsx  FieldLabel.tsx  NumberField.tsx  PatientForm.tsx  PredictionError.tsx  PredictionResult.tsx  PredictionSkeleton.tsx  SelectField.tsx  Source.tsx
ml/: clean_data.ipynb  cox_model.ipynb  evaluate_final_model.ipynb  feature_comparison.ipynb  feature_selection.ipynb  gradient_boosted_machine.ipynb  gradient_boosting.ipynb  model.ipynb  plot_model_comparison.ipynb  prediction_example.ipynb  progression_rate.ipynb  pyproject.toml  random_survival_forest.ipynb  train.py  train_final_models.ipynb
ml/cleaned_data/: all_features.csv  feature_stats.json  mm_nopgs.csv  mm_pgs_bin.csv  mm_pgs_score.csv
ml/data/: myeloma_data.csv
