[project]
name = "mm-predict-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "scikit-survival",
    "pydantic",
    "sentry-sdk",
    "python-dotenv",
    "uvicorn[standard]",
    "mm-predict-core",
]

[tool.uv.sources]
mm-predict-core = { path = "..", editable = true }
